
    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

  IMPROVEMENTS

    HADOOP-11692. Improve authentication failure WARN message to avoid user
    confusion. (Yongjun Zhang)

    HADOOP-11659. o.a.h.fs.FileSystem.Cache#remove should use a single hash map
    lookup. (Brahma Reddy Battula via aajisaka)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-10027. *Compressor_deflateBytesDirect passes instance instead of
    jclass to GetStaticObjectField. (Hui Zheng via cnauroth)

Release 2.7.0 - UNRELEASED

  INCOMPATIBLE CHANGES

    HADOOP-10530 Make hadoop build on Java7+ only (stevel)

  NEW FEATURES

    HADOOP-10987. Provide an iterator-based listing API for FileSystem (kihwal)

    HADOOP-7984. Add hadoop --loglevel option to change log level.
    (Akira AJISAKA via cnauroth)

    HADOOP-9629. Support Windows Azure Storage - Blob as a file system in Hadoop.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,
    Mike Liddell, Chuan Liu, Lengning Liu, Ivan Mitic, Michael Rys,
    Alexander Stojanovic, Brian Swan, and Min Wei via cnauroth)

    HADOOP-10728. Metrics system for Windows Azure Storage Filesystem.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,
    Mike Liddell, Chuan Liu, Lengning Liu, Ivan Mitic, Michael Rys,
    Alexander Stojanovich, Brian Swan, and Min Wei via cnauroth)

    HADOOP-8989. hadoop fs -find feature (Jonathan Allen via aw)

    HADOOP-11490. Expose truncate API via FileSystem and shell command.
    (Milan Desai via shv)

    HADOOP-11045. Introducing a tool to detect flaky tests of hadoop jenkins testing
    job. (Yongjun Zhang and Todd Lipcon via ozawa)

    HADOOP-11510. Expose truncate API via FileContext. (yliu)

    HADOOP-11569. Provide Merge API for MapFile to merge multiple similar MapFiles
    to one MapFile. (Vinayakumar B via ozawa)

  IMPROVEMENTS
